[package]
name = "hello-API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
dotenv = "0.15.0" #in this case used for reading configs from a file and load them as an env var
config = "0.10.1" #can read configs from different sources and load them into a type we can define
serde = { version = "1.0.104", features = ["derive"] }